# impaired

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml  simple_cli.rs
impaired/: Cargo.toml
impaired-web/: Cargo.toml  app.js  customElements.js  index.html
impaired-web/src/: lib.rs
impaired/src/: lib.rs
src/: lib.rs
