[package]
name = "impaired-web"
version = "0.1.0"
edition = "2021"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "A website for performing pairwise comparisons"
homepage = "https://github.com/pitkley/impaired"
repository = "https://github.com/pitkley/impaired.git"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
impaired = { path = "../impaired" }
ouroboros = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.81"
